--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: FORREPLACE1235-secret
-  namespace: FORREPLACE1235
+  name: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-secret
+  namespace: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf
 type: Opaque
 data:
   rootpassword: ${{secret.ROOTPASSWORD}} | base64
