--- a/k8s/server.yaml
+++ b/k8s/server.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: FORREPLACE1235-webserver
-  namespace: FORREPLACE1235
+  name: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-webserver
+  namespace: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf
   labels:
     app: apache
 spec:
@@ -21,26 +21,26 @@ spec:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: FORREPLACE1235-mysql-secrets
+              name: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-mysql-secrets
               key: rootpassword
-        image: gcr.io/PROJECT123/FORREPLACE1235
+        image: gcr.io/PROJECT123/vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf
         ports:
         - containerPort: 80
         volumeMounts:
         - name: pvc-sym-m
           mountPath: /var/www/upload/image
       volumes:
-      - name: FORREPLACE1235-pvc-sym-m
+      - name: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-pvc-sym-m
         persistentVolumeClaim:
-          claimName: FORREPLACE1235-pvc-sym-uploud
+          claimName: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-pvc-sym-uploud
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: FORREPLACE1235-web-service
-  namespace: FORREPLACE1235
+  name: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-web-service
+  namespace: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf
   labels:
-    run: FORREPLACE1235-web-service
+    run: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-web-service
 spec:
   type: LoadBalancer
   ports:
@@ -52,8 +52,8 @@ spec:
 apiVersion: v1                  
 kind: PersistentVolumeClaim     
 metadata:                       
-   name: FORREPLACE1235-pvc-sym-uploud
-   namespace: FORREPLACE1235
+   name: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf-pvc-sym-uploud
+   namespace: vfvdfvdfvfdvdfvfdvdvfvdfvdfvfdvf
 spec:                           
    accessModes:                  
    - ReadWriteOnce              
